monticore-generator/src/test/resources/cocos/invalid/A4022/A4022b.mc4
package cocos.invalid.A4022;

grammar A4022b {

  A extends B;

  B extends A;

}
